--- a/css/style-profile.css
+++ b/css/style-profile.css
@@ -1,38 +1,47 @@
 /*Подключение шрифта Roboto-Regular*/
 @font-face {
-	font-family: "Roboto";
-	src:url(fonts/Roboto-Regular.woff2);
+	font-family: Roboto;
+	src:url(fonts/Roboto-Regular.woff), 
+		url(fonts/Roboto-Regular.woff2);
 	font-weight:400;
 	font-style:normal;
 }
 
 /*Подключение шрифта Roboto-Medium*/
 @font-face {
-	font-family: "Roboto";
-	src:url(fonts/Roboto-Medium.woff2);
+	font-family: Roboto;
+	src:url(fonts/Roboto-Medium.woff), 
+		url(fonts/Roboto-Medium.woff2);
 	font-weight: 500;
 	font-style:normal;
 }
 
 /*Подключение шрифта Roboto-Bold*/
 @font-face {
-	font-family: "Roboto";
-	src:url(fonts/Roboto-Bold.woff2);
+	font-family: Roboto;
+	src:url(fonts/Roboto-Bold.woff),
+		url(fonts/Roboto-Bold.woff2);
 	font-weight: 700;
 	font-style:normal;
 }
- 
-  
 
 body {
 	font-family: Roboto, sans-serif;
 	background-color: #660066;
 }
 
+.container {
+	display: flex;
+	flex-wrap: nowrap;
+}
+
+.header {
+	height: 11%;
+}
 /*содержит в себе логотип и текст*/
 .contain-logo {
 	position: absolute;
-	width: 185px;
+	width: 195px;
 	height: 45px;
 	margin-left: 15px;
 	padding-top: 15px;
@@ -54,9 +63,101 @@ body {
 	font-weight: bold;
 	text-transform: uppercase;
 	color: #ffffff;
-
 	margin-top: 10px;
 }
+
+.container-menu {
+	height: 82%;
+	padding-top: 20%;
+}
+
+
+.items-menu {
+	width: 240px;
+	/*padding: 10px 0;*/
+	
+	margin: 0 auto;
+}
+
+.for-checkbox {
+
+	background-size: 26px;
+
+	background-position: 10px 7px;
+	background-repeat: no-repeat;
+	border-bottom: 2px solid #800080;
+	margin-bottom: 5px;
+}
+
+.for-checkbox:hover {
+	
+	border-bottom: 2px solid #7fff7fe6;
+}
+
+.check-prof {
+	background-size: 19px;
+	background-image: url("../svg/profile.svg");
+}
+
+.check-user { 
+	background-image: url("../svg/manag-user.svg");
+}
+
+.check-role {
+	background-image: url("../svg/manag-role.svg");
+}
+
+.check-exit {
+	background-image: url("../svg/exit.svg");
+	
+}
+
+[type="checkbox"]:checked,
+[type="checkbox"]:not(:checked),
+[type="radio"]:checked,
+[type="radio"]:not(:checked){
+	position: absolute;
+	left: -9999px;
+	width: 0;
+	height: 0;
+	visibility: hidden;
+}
+
+.checkbox-menu:checked + label,
+.checkbox-menu:not(:checked) + label {
+	position: relative;
+	display: block;
+	font-size: 14px;;
+	padding: 10px;
+	width: 100%;
+	color: #000000;
+}
+
+.checkbox-menu:not(:checked) + label{
+    background-color:transparent;
+}
+
+.checkbox-menu:checked + label{
+    background-color: #7fff7f66;
+}
+
+.checkbox-menu:checked + label .uil,
+.checkbox-menu:not(:checked) + label .uil{
+	font-size: 14px;
+	line-height: 24px;
+	display: block;
+	padding-bottom: 0;
+}
+
+.link-menu {
+	text-decoration: none;
+	font-weight: 500;
+	color: #FDFDFD;
+	
+	margin: 20px 0 20px 55px;
+}
+
+
 
 /*Цвет фона для всех секций*/
 section {
@@ -72,13 +173,16 @@ section {
 /*Контайнер с основным собержимым*/
 .main-contant {
 	display: flex;
+	flex-wrap: wrap;
+	width: 100%;
 }
 
-/*Левое меню*/
+/*Левое меню 91.8vh;*/
 .left-menu {
-	width: 21%;
 	max-width: 300px;
-	height: 89.28vh;
+	min-width: 300px;
+	height: 100vh; 
+	/*89.28vh*/
 }
 
 /*Заголовок контейнера с данными пользователя*/
@@ -86,30 +190,46 @@ section {
 	font-size: 24px;
 	font-weight: bold;
 	color: #ffffff;
+	margin-bottom: 15px;
 }
 
 /*Контейнер с данными пользователя*/
 .container-contant {
 	padding: 20px 30px;
-	width: 79%;
+	width: 100%;
 	height: 100%;
-	margin: 0 auto;
+	/*margin: 0 auto;*/
 }
 
-.items-menu {
-	padding: 0.72em 1.5em;
-}
+/* Set height of body and the document to 100% to enable "full page tabs" */
 
-.items-menu::after {
-	content: "";
-	margin-top: 7px;
-	border-bottom: 2px solid #ffffff;
-	display:block; 
-}
-
-.item {
+  
+  /* Style tab links */
+  .tablink {
+	background-color: #991199;
+	color: white;
+	float: left;
+	border: none;
+	outline: none;
+	cursor: pointer;
+	padding: 10px;
 	font-size: 14px;
-	font-weight: medium;
-	text-decoration: none;
-	color: #ffffff;
-}
+	font-weight: 700;
+	width: 15%;
+  }
+  
+  .tablink:hover {
+	background-color: #b61fb6;
+	
+  }
+  
+  /* Style the tab content (and add height:100% for full page content) */
+  .tabcontent {
+	color: white;
+	display: none;
+	padding: 100px 20px;
+	height: 100%;
+  }
+  
+  #Home {background-color:#800080;}
+  #News {background-color: #800080;}
