--- a/css/style-profile.css
+++ b/css/style-profile.css
@@ -96,19 +96,19 @@ body {
 
 .check-prof {
 	background-size: 19px;
-	background-image: url("svg/profile.svg");
+	background-image: url("../svg/profile.svg");
 }
 
 .check-user { 
-	background-image: url("svg/manag-user.svg");
+	background-image: url("../svg/manag-user.svg");
 }
 
 .check-role {
-	background-image: url("svg/manag-role.svg");
+	background-image: url("../svg/manag-role.svg");
 }
 
 .check-exit {
-	background-image: url("svg/exit.svg");
+	background-image: url("../svg/exit.svg");
 	
 }
 
