--- a/css/style-profile.css
+++ b/css/style-profile.css
@@ -471,6 +471,8 @@ input[type="radio"]:checked + label span {
 	background-image: url("../svg/open-eye.svg");
 	background-repeat: no-repeat;
 	display: none;
+
+	cursor:pointer;
 }
 
 .button-close-eye, .button-conf-close-eye {
@@ -486,6 +488,8 @@ input[type="radio"]:checked + label span {
 
 	background-image: url("../svg/closed-eye.svg");
 	background-repeat: no-repeat;
+
+	cursor:pointer;
 }
 
 .button-save {
