--- a/css/style-profile.css
+++ b/css/style-profile.css
@@ -208,7 +208,7 @@ section {
 }
 
 /* стиль для кнопки вкладки */
-.tablink {
+.tablink,.tablink1 {
 	background-color: #991199;
 	color: white;
 	float: left;
@@ -222,12 +222,12 @@ section {
 }
 
 /*При наведении*/
-.tablink:hover {
+.tablink:hover,.tablink1:hover {
 	background-color: #973E95;
 }
 
 /* Стиль для содержимого вкладок */
-.tabcontent {
+.tabcontent,.tabcontent1 {
 	color: white;
 	display: none;
 	padding-left: 50px;
@@ -263,7 +263,7 @@ section {
 	flex-wrap: wrap;
 }
 
-.input-field {
+.input-field,.input-field1 {
 	width: 100%;
 
 	margin-top: 5px;
@@ -307,7 +307,7 @@ section {
 	margin-bottom: 5px;
 }
 
-.hideElement {
+.hideElement,.hideElement1 {
 	visibility: hidden;
 }
 
@@ -346,7 +346,9 @@ input[type="radio"]:checked + label span {
   
 	font-size: 14px;
 	font-weight: 700;
-	color: #ffffff;	  		
+	color: #ffffff;	  
+
+	outline: none;
 }
 
 /*Стиль для синих кнопок*/
@@ -392,6 +394,16 @@ input[type="radio"]:checked + label span {
 	width: 135px;
 	height: 135px;
 	background-image: url("../img/Todarenco.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
+	border-radius: 50%;
+	border: 2px solid #ffffff;
+}
+
+.image-profile1 {
+	width: 135px;
+	height: 135px;
+	background-image: url("../img/clear-prof.png");
 	background-repeat: no-repeat;
 	background-size: cover;
 	border-radius: 50%;
@@ -550,7 +562,7 @@ input[type="radio"]:checked + label span {
 	left: 47%;
 }
 
-.item-role,.item-function {
+.item-role,.item-function,.item-role1,.item-function1  {
 	width: 100%;	
 	background-color: #973E95;
 	padding: 0.9em 2.5em;
@@ -562,6 +574,8 @@ input[type="radio"]:checked + label span {
 	font-size: 12px;
 	font-weight: 400;
 	font-family: inherit;
+
+	outline: none;
 }
 
 .input-field-role {
@@ -586,12 +600,12 @@ input[type="radio"]:checked + label span {
 	font-family: inherit;
 }
 
-.item-role:nth-child(even),.item-function:nth-child(even) {
+.item-role:nth-child(even),.item-function:nth-child(even),.item-role1:nth-child(even),.item-function1:nth-child(even)  {
 	background-color: #AD66A9;
 	border: solid 2px #AD66A9;
 }
 
-.item-role:hover {
+.item-role:hover,.item-role1:hover {
 	border: solid 2px #00BFFF;
 }
 
@@ -892,6 +906,8 @@ input[type="radio"]:checked + label span {
 	border-radius: 50%;
 	
 }
+
+
 .container-img {
 	width: 50px;
 }
@@ -936,7 +952,7 @@ input[type="radio"]:checked + label span {
 }
 
 .del-item {
-	background-image: url("../svg/delete.svg");
+	background-image: url("../svg/delete-grin.svg");
 	background-repeat: no-repeat;
 	background-position: cover;
 	position: absolute;
