--- a/css/style-profile.css
+++ b/css/style-profile.css
@@ -463,6 +463,15 @@ input[type="radio"]:checked + label span {
 	padding-bottom: 30px;
 }
 
+.footer-profile1 {
+	display: flex;
+	justify-content: flex-end;
+	width: 100%;
+	height: 40.16px;
+	margin-top: 15px;
+	padding-bottom: 0;
+}
+
 .button-edit-text {
 	margin-left: 30px;
 	font-weight: inherit;	
@@ -533,6 +542,7 @@ input[type="radio"]:checked + label span {
 }
 
 .role-content {
+	margin-top: 25px;
 	width: 100%;
 	height: 95%;
 	display: flex;
@@ -569,7 +579,7 @@ input[type="radio"]:checked + label span {
 	left: 47%;
 }
 
-.item-role,.item-function,.item-role1,.item-role2,.item-function1,.item-function2  {
+.item-role,.item-function,.item-role1,.item-function1,.item-function2  {
 	width: 100%;	
 	background-color: #973E95;
 	padding: 0.9em 2.5em;
@@ -583,6 +593,24 @@ input[type="radio"]:checked + label span {
 	font-family: inherit;
 
 	outline: none;
+}
+
+.item-role2 {
+	width: 100%;	
+	background-color: #973E95;
+	padding: 0.9em 2.5em;
+	border: solid 2px #973E95;
+	color: #ffffff;
+	text-align: left;
+	position: relative;
+
+	font-size: 12px;
+	font-weight: 400;
+	font-family: inherit;
+
+	outline: none;
+
+	display: flex;
 }
 
 .input-field-role {
@@ -644,6 +672,11 @@ input[type="radio"]:checked + label span {
 	padding-bottom: 50px;
 }
 
+.access-function1 {
+	margin-top: 30px;
+	padding-bottom: 0;
+}
+
 .button-item {
 	background-image: url("../svg/delete.svg");
 	width: 17px;
@@ -674,8 +707,8 @@ input[type="radio"]:checked + label span {
 
 .contant-role {
 	position: relative;
-	padding: 30px 35px 5px 35px;
-	height: 95%;
+	padding: 30px 35px 15px 35px;
+	height: 535px;
 }
 
 .search-panel {
@@ -728,6 +761,12 @@ input[type="radio"]:checked + label span {
 
 .head-table {
 	margin-top: 30px;
+	margin-bottom: 5px;
+	display: flex;
+	flex-wrap: nowrap;
+}
+
+.head-table1 {
 	margin-bottom: 5px;
 	display: flex;
 	flex-wrap: nowrap;
@@ -795,6 +834,54 @@ input[type="radio"]:checked + label span {
 }
 
 .FIO-item-value::before {
+	content: "";
+	width: 1px;
+	height: 25px;
+	display: block;
+	background-color: #404040;
+	position: absolute;
+	top: -5px;
+	left: 90%;
+}
+
+.sysname-role-item-value {
+	width: 20%;
+	padding-left: 0%;
+}
+
+.sysname-role-item-value::before {
+	content: "";
+	width: 1px;
+	height: 25px;
+	display: block;
+	background-color: #404040;
+	position: absolute;
+	top: -5px;
+	left: 90%;
+}
+
+.name-role-item-value {
+	width: 40%;
+	padding-left: 4%;
+}
+
+.name-role-item-value::before {
+	content: "";
+	width: 1px;
+	height: 25px;
+	display: block;
+	background-color: #404040;
+	position: absolute;
+	top: -5px;
+	left: 90%;
+}
+
+.date-end-item-value {
+	width: 20%;
+	padding-left: 0%;
+}
+
+.date-end-item-value::before {
 	content: "";
 	width: 1px;
 	height: 25px;
@@ -991,6 +1078,31 @@ input[type="radio"]:checked + label span {
 	height: 20px;
 	right: 0;
 	margin: -2px 15%;
+}
+
+
+.del-item1 {
+	background-image: url("../svg/delete-grin.svg");
+	background-repeat: no-repeat;
+	background-position: cover;
+	position: absolute;
+	width: 17px;
+	height: 20px;
+	fill: #7FFF7F;
+	right: 0;
+	margin: -2px 0%;
+}
+
+.edit-item1 {
+	background-image: url("../svg/edit-table.svg");
+	background-repeat: no-repeat;
+	background-position: cover;
+	position: absolute;
+	fill: #7FFF7F;
+	width: 20px;
+	height: 20px;
+	right: 0;
+	margin: -2px 40px;
 }
 	
 /**/
