--- a/css/style-profile.css
+++ b/css/style-profile.css
@@ -472,9 +472,19 @@ input[type="radio"]:checked + label span {
 	padding-bottom: 0;
 }
 
+.footer-scroll-window {
+	margin-top: 20px;
+}
+
+.head-scrpll-window {
+	margin-bottom: 20px;
+}
+
 .group-button1 {
 	display: none;
 }
+
+
 
 .button-edit-text {
 	margin-left: 30px;
@@ -570,8 +580,14 @@ input[type="radio"]:checked + label span {
 
 .items-role,.items-access-function,.items-role2 {
 	border: 1px solid #ffffff;
-	
+	margin-top: 10px;
 	width: 100%;
+	max-height: 400px;
+	overflow-y: scroll; /* прокрутка по вертикали */
+}
+
+.items-access-function {
+	max-height: 130px;
 }
 
 .list-role,.list-role1 {
@@ -602,7 +618,8 @@ input[type="radio"]:checked + label span {
 	font-size: 12px;
 	font-weight: 400;
 	font-family: inherit;
-
+	
+	cursor: pointer;
 	outline: none;
 }
 
@@ -620,7 +637,7 @@ input[type="radio"]:checked + label span {
 	font-family: inherit;
 
 	outline: none;
-
+	cursor: pointer;
 	display: flex;
 }
 
@@ -698,7 +715,7 @@ input[type="radio"]:checked + label span {
 	margin: -2px 30px;
 }
 
-.button-item::before {
+.button-item::before,.button-item-func::before  {
 	content: "";
 	display: block;
 	width: 1px;
@@ -708,6 +725,18 @@ input[type="radio"]:checked + label span {
 	right: 50px;
 	margin-top: -2px;
 	position: absolute;
+}
+
+
+
+.button-item-func {
+	background-image: url("../svg/delete-grin.svg");
+	width: 17px;
+	height: 20px;
+	background-repeat: no-repeat;
+	position: absolute;
+	right: 0;
+	margin: -2px 30px;
 }
 
 .contant-user{
@@ -1101,6 +1130,11 @@ input[type="radio"]:checked + label span {
 	display: flex;
 }
 
+.group-button-scroll {
+	display: flex;
+	justify-content: space-between;
+}
+
 .del-item {
 	background-image: url("../svg/delete-grin.svg");
 	background-repeat: no-repeat;
@@ -1158,12 +1192,90 @@ input[type="radio"]:checked + label span {
 .head-access-function1 {
 	display: flex;
 	flex-wrap: nowrap;
-	margin-bottom: 10px;
 	justify-content: last baseline;
 }
 
 .button-add-function {
 	visibility: hidden;
+}
+
+.role-add2 {
+	display: none;
+}
+
+.scroll-window {
+	width: 400px;
+	height: 250px;
+	padding: 20px;
+	background-color: #991199;
+
+	position: absolute;
+	right: 0;
+	bottom: 200px;
+
+	visibility: hidden;
+
+}
+
+.scroll-access-function {
+	height:120px;
+	overflow-y: scroll; /* прокрутка по вертикали */
+
+	border: 1px solid #ffffff;
+}
+
+/*поле чекбокса*/
+.checkbox1 {
+    position: absolute;
+    clip: rect(1px,1px,1px,1px);
+    height: 1px;
+    width: 1px;
+}
+
+
+/*отрисовка своего чекбокса*/
+.check-text::before {
+    content: "";
+    display: inline-block;
+    vertical-align: middle;
+    width: 25px;
+    height: 25px;
+    background-image: url("../svg/input-checkbox.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 25px;
+	margin-right: 8px;
+	margin-top: -25px;
+}
+
+/*Настройка события при нажатии*/
+.checkbox:checked ~ .check-text::before {	
+	background-image: url("../svg/input-checkbox-check.svg");
+}
+
+.button-item-scroll {
+	width: 17px;
+	height: 20px;
+	background-repeat: no-repeat;
+	position: absolute;
+	right: 0;
+	margin: -2px 30px;
+}
+
+.button-item-scroll::before {
+	content: "";
+	display: block;
+	width: 1px;
+	height: 24px;
+	background-color: #404040;
+	top: 0;
+	right: 50px;
+	margin-top: -17px;
+	position: absolute;
+}
+
+#items-func-9,#items-func-10,#items-func-11 {
+	display: none;
 }
 
 @media (max-width: 1900px) {
